--- a/samples/XCT.Sample/Pages/Converters/ByteArrayToImageSourcePage.xaml
+++ b/samples/XCT.Sample/Pages/Converters/ByteArrayToImageSourcePage.xaml
@@ -1,43 +1,48 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
-<pages:BasePage xmlns="http://xamarin.com/schemas/2014/forms"
-                xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
-                xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
-                xmlns:vm="clr-namespace:Xamarin.CommunityToolkit.Sample.ViewModels.Converters"
-                x:Class="Xamarin.CommunityToolkit.Sample.Pages.Converters.ByteArrayToImageSourcePage">
+﻿<?xml version="1.0" encoding="UTF-8" ?>
+<pages:BasePage
+    x:Class="Xamarin.CommunityToolkit.Sample.Pages.Converters.ByteArrayToImageSourcePage"
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
+    xmlns:vm="clr-namespace:Xamarin.CommunityToolkit.Sample.ViewModels.Converters"
+    xmlns:xct="http://xamarin.com/schemas/2020/toolkit">
 
     <pages:BasePage.BindingContext>
         <vm:ByteArrayToImageSourceViewModel />
     </pages:BasePage.BindingContext>
 
     <ContentPage.Resources>
-         <ResourceDictionary>
-             <xct:ByteArrayToImageSourceConverter x:Key="ByteArrayToImageSourceConverter" />
-         </ResourceDictionary>
+        <ResourceDictionary>
+            <xct:ByteArrayToImageSourceConverter x:Key="ByteArrayToImageSourceConverter" />
+        </ResourceDictionary>
     </ContentPage.Resources>
 
     <ContentPage.Behaviors>
-        <xct:EventToCommandBehavior EventName="Appearing" Command="{Binding PageAppearingCommand}"/>
+        <xct:EventToCommandBehavior Command="{Binding PageAppearingCommand}" EventName="Appearing" />
     </ContentPage.Behaviors>
 
     <pages:BasePage.Content>
 
         <StackLayout Orientation="Vertical" VerticalOptions="Center">
 
-            <Label Margin="16"
-                   HorizontalTextAlignment="Center"
-                   HorizontalOptions="Center"
-                   Text="Image below uses byte array from ViewModel which is converted to ImageSource using ByteArrayToImageSource converter." />
+            <Label
+                Margin="16"
+                HorizontalOptions="Center"
+                HorizontalTextAlignment="Center"
+                Text="Image below uses byte array from ViewModel which is converted to ImageSource using ByteArrayToImageSource converter." />
 
-            <xct:AvatarView Size="300"
-                            Source="{Binding Avatar, Converter={StaticResource ByteArrayToImageSourceConverter}}"
-                            HorizontalOptions="Center" VerticalOptions="Center" />
+            <xct:AvatarView
+                HorizontalOptions="Center"
+                Size="300"
+                Source="{Binding Avatar, Converter={StaticResource ByteArrayToImageSourceConverter}}"
+                VerticalOptions="Center" />
 
-            <Label Text="Please wait..."
-                   Margin="16"
-                   HorizontalOptions="Center"
-                   FontAttributes="Bold"
-                   IsVisible="{Binding IsBusy}" />
+            <Label
+                Margin="16"
+                FontAttributes="Bold"
+                HorizontalOptions="Center"
+                IsVisible="{Binding IsBusy}"
+                Text="Please wait..." />
 
         </StackLayout>
 
