--- a/samples/XCT.Sample/Pages/Effects/ShadowEffectPage.xaml
+++ b/samples/XCT.Sample/Pages/Effects/ShadowEffectPage.xaml
@@ -72,6 +72,14 @@
                 </Grid>
             </StackLayout>
 
+            <StackLayout>
+                <Label Text="Button with Shadow" />
+                <Button Text="Click me"
+                        Margin="0"
+                        xct:ShadowEffect.Radius="10"
+                        xct:ShadowEffect.Color="Red" />
+            </StackLayout>
+
     </StackLayout>
     </ScrollView>
 </pages:BasePage>
