--- a/samples/XCT.Sample/Pages/Behaviors/MaskedBehaviorPage.xaml
+++ b/samples/XCT.Sample/Pages/Behaviors/MaskedBehaviorPage.xaml
@@ -2,8 +2,8 @@
 <pages:BasePage x:Class="Xamarin.CommunityToolkit.Sample.Pages.Behaviors.MaskedBehaviorPage"
                 xmlns="http://xamarin.com/schemas/2014/forms"
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
-                xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages;assembly=Xamarin.CommunityToolkit.Sample">
+                xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages;assembly=Xamarin.CommunityToolkit.Sample"
+                xmlns:xct="http://xamarin.com/schemas/2020/toolkit">
     <ScrollView>
         <StackLayout Padding="{StaticResource ContentPadding}" Spacing="5">
 
@@ -14,14 +14,18 @@
                     <xct:MaskedBehavior Mask="XX-XX-XX" />
                 </Entry.Behaviors>
             </Entry>
-            <Label Padding="10,0,10,50" FontSize="Small" Text="e.g. Sort code 'XX-XX-XX'" />
+            <Label Padding="10,0,10,50"
+                   FontSize="Small"
+                   Text="e.g. Sort code 'XX-XX-XX'" />
 
             <Entry Keyboard="Numeric">
                 <Entry.Behaviors>
                     <xct:MaskedBehavior Mask="AA-AA-AA" UnMaskedCharacter="A" />
                 </Entry.Behaviors>
             </Entry>
-            <Label Padding="10,0,10,50" FontSize="Small" Text="e.g. Sort code 'AA-AA-AA'" />
+            <Label Padding="10,0,10,50"
+                   FontSize="Small"
+                   Text="e.g. Sort code 'AA-AA-AA'" />
 
             <Entry Keyboard="Numeric">
                 <Entry.Behaviors>
@@ -42,7 +46,9 @@
                     <xct:MaskedBehavior Mask="XX/XX/XXXX" />
                 </Entry.Behaviors>
             </Entry>
-            <Label Padding="10,0,10,50" FontSize="Small" Text="e.g. Date 'XX/XX/XXXX'" />
+            <Label Padding="10,0,10,50"
+                   FontSize="Small"
+                   Text="e.g. Date 'XX/XX/XXXX'" />
 
             <Entry Keyboard="Numeric" Placeholder="hh:mm">
                 <Entry.Behaviors>
@@ -63,27 +69,18 @@
                     <xct:MaskedBehavior Mask="XXX-XX-XXXX" />
                 </Entry.Behaviors>
             </Entry>
-            <Label Padding="10,0,10,50" FontSize="Small" Text="e.g. Social Security Number 'XXX-XX-XXXX'" />
+            <Label Padding="10,0,10,50"
+                   FontSize="Small"
+                   Text="e.g. Social Security Number 'XXX-XX-XXXX'" />
 
             <Entry Keyboard="Numeric">
                 <Entry.Behaviors>
                     <xct:MaskedBehavior Mask="(XXX) XXX-XXXX" />
                 </Entry.Behaviors>
             </Entry>
-            <Label Padding="10,0,10,50" FontSize="Small" Text="e.g. Phone Number '(XXX) XXX-XXXX'" />
-
-            <Entry x:Name="PhoneEntry"
-                   Keyboard="Telephone"
-                   Placeholder="Phone">
-                <Entry.Behaviors>
-                    <xct:CharactersValidationBehavior x:Name="PhoneValidator"
-                                                      CharacterType="Digit"
-                                                      Flags="ValidateOnValueChanging"
-                                                      MinimumCharacterCount="11" />
-                    <xct:MaskedBehavior Mask="+1 (AAA) AAA-AAAA" UnMaskedCharacter="A" />
-                </Entry.Behaviors>
-            </Entry>
-            <Label Padding="10,0,10,50" FontSize="Small" Text="Test for issue #1276'" /> <!-- https://github.com/xamarin/XamarinCommunityToolkit/issues/1276 -->
+            <Label Padding="10,0,10,50"
+                   FontSize="Small"
+                   Text="e.g. Phone Number '(XXX) XXX-XXXX'" />
         </StackLayout>
     </ScrollView>
 </pages:BasePage>
