--- a/samples/XCT.Sample/Pages/Effects/SemanticEffectPage.xaml
+++ b/samples/XCT.Sample/Pages/Effects/SemanticEffectPage.xaml
@@ -5,7 +5,7 @@
              xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
              xmlns:xct="http://xamarin.com/schemas/2020/toolkit">
     <ContentPage.Content>
-        <ScrollView>
+        <!--<ScrollView>
             <StackLayout Padding="20">            
                 <Label Text="I have no heading" xct:SemanticEffect.HeadingLevel="None"/>
                 <Label Text="I am a heading 1" xct:SemanticEffect.HeadingLevel="Level1"/>
@@ -30,6 +30,200 @@
                     Source="{xct:ImageResource Id=Xamarin.CommunityToolkit.Sample.Images.logo.png}"
                     xct:SemanticEffect.Description="This is a description that describes the image. For example, 'image of xamarin community toolkit logo'"/>
             </StackLayout>
+        </ScrollView>-->
+
+        <ScrollView Margin="15,20">
+            <StackLayout>
+                <Label
+                    Text="Welcome to .NET MAUI Semantics!"
+                    xct:SemanticEffect.Description="Welcome to dotnet MAUI Semantics!"
+                    TextColor="DodgerBlue"
+                    FontSize="30"
+                    HorizontalTextAlignment="Center"/>
+
+                <Label
+                    Text="We hope the all-new SemanticProperties will enable you to develop accessible apps more seamlessly"
+                    TextColor="DodgerBlue"
+                    FontSize="20"
+                    HorizontalTextAlignment="Center"/>
+
+                <Label
+                    Text="Turn on your screen reader and listen for what is read aloud. The text-based controls below are labeled to indicate what is expected to be read aloud: T refers to the Text, D is the Description text, and H is the Hint text."
+                    TextColor="RoyalBlue"
+                    FontAttributes="Bold"
+                    FontSize="16"
+                    Margin="0,10"/>
+
+                <Label
+                    Text="Label text TH"
+                    FontSize="14"
+                    xct:SemanticEffect.Hint="Hint text"/>
+
+                <Label
+                    Text="Label text DH"
+                    FontSize="14"
+                    xct:SemanticEffect.Description="Description text"
+                    xct:SemanticEffect.Hint="Hint text"/>
+
+                <Button
+                    Text="Button text TH"
+                    FontSize="14"
+                    x:Name="pushButton"
+                    HorizontalOptions="Center"
+                    WidthRequest="200"
+                    xct:SemanticEffect.Hint="Hint text"/>
+
+                <Button
+                    Text="Button text DH"
+                    FontSize="14"
+                    HorizontalOptions="CenterAndExpand"
+                    WidthRequest="200"
+                    x:Name="popButton"
+                    xct:SemanticEffect.Description="Description text"
+                    xct:SemanticEffect.Hint="Hint text"/>
+
+                <Entry
+                    Text="Entry text, iOS:DTH, Android:TH"
+                    FontSize="14"
+                    xct:SemanticEffect.Description="Description text"
+                    xct:SemanticEffect.Hint="Hint text" />
+
+                <Entry
+                    FontSize="14"
+                    xct:SemanticEffect.Description="Description text"
+                    xct:SemanticEffect.Hint="Hint text"/>
+
+                <Editor
+                    Text="Editor text, iOS:DTH, Android:TH"
+                    FontSize="14"
+                    xct:SemanticEffect.Description="Description text"
+                    xct:SemanticEffect.Hint="Hint text"/>
+
+                <Editor
+                    FontSize="14"
+                    xct:SemanticEffect.Description="Description text"
+                    xct:SemanticEffect.Hint="Hint text"/>
+            
+                <SearchBar
+                    Text="Search bar text, iOS:T, Android:DH?"
+                    Placeholder="Placeholder text"
+                    PlaceholderColor="DodgerBlue"
+                    xct:SemanticEffect.Description="Description text"
+                    xct:SemanticEffect.Hint="Hint text"/>
+
+                <Label
+                    Text="The next 3 controls read out iOS:DTH, Android:TH"
+                    TextColor="RoyalBlue"
+                    FontAttributes="Bold"
+                    FontSize="16"
+                    Margin="0,10"/>
+
+                <Picker
+                    Title="Select a monkey, iOS:DTH, Android:TH"
+                    xct:SemanticEffect.Description="Description text"
+                    xct:SemanticEffect.Hint="Hint text">
+                    <Picker.ItemsSource>
+                        <x:Array Type="{x:Type x:String}">
+                            <x:String>Baboon</x:String>
+                            <x:String>Capuchin Monkey</x:String>
+                            <x:String>Blue Monkey</x:String>
+                            <x:String>Squirrel Monkey</x:String>
+                            <x:String>Golden Lion Tamarin</x:String>
+                            <x:String>Howler Monkey</x:String>
+                            <x:String>Japanese Macaque</x:String>
+                        </x:Array>
+                    </Picker.ItemsSource>
+                </Picker>
+
+                <DatePicker
+                    xct:SemanticEffect.Description="Description text"
+                    xct:SemanticEffect.Hint="Hint text"/>
+
+                <TimePicker
+                    xct:SemanticEffect.Description="Description text"
+                    xct:SemanticEffect.Hint="Hint text"/>
+
+                <Label
+                    Text="The rest of the controls read out DH"
+                    TextColor="RoyalBlue"
+                    FontAttributes="Bold"
+                    FontSize="16"
+                    Margin="0,10"/>
+
+                <ActivityIndicator 
+                    IsRunning="True"
+                    Color="DodgerBlue"
+                    xct:SemanticEffect.Description="Description text"
+                    xct:SemanticEffect.Hint="Hint text"/>
+
+                <ProgressBar 
+                    Progress="0.5"
+                    ProgressColor="DodgerBlue"
+                    xct:SemanticEffect.Description="Description text"
+                    xct:SemanticEffect.Hint="Hint text"/>
+
+                <Slider
+                    xct:SemanticEffect.Description="Description text"
+                    xct:SemanticEffect.Hint="Hint text"/>
+
+                <!-- iOS: currently not accessible as a whole; only focuses on increment/decrement buttons individually -->
+                <Stepper
+                    xct:SemanticEffect.Description="Description text"
+                    xct:SemanticEffect.Hint="Hint text"/>
+
+                <Switch 
+                    IsToggled="True"
+                    OnColor="DodgerBlue"
+                    xct:SemanticEffect.Description="Description text"
+                    xct:SemanticEffect.Hint="Hint text"/>
+
+                <CheckBox
+                    IsChecked="True"
+                    Color="DodgerBlue"
+                    xct:SemanticEffect.Description="Description text"
+                    xct:SemanticEffect.Hint="Hint text"/>
+
+                <Image
+                    Source="{xct:ImageResource Id=Xamarin.CommunityToolkit.Sample.Images.logo.png}"
+                    xct:SemanticEffect.Description="Description text"
+                    xct:SemanticEffect.Hint="Hint text"/>
+
+                <Label
+                    Text="This next set of controls exist solely for testing the HeadingLevel property. If testing on mobile, be sure to activate Headings and swipe up/down with one finger to test."
+                    TextColor="RoyalBlue"
+                    FontAttributes="Bold"
+                    FontSize="16"
+                    Margin="0,10"/>
+
+                <Label
+                    Text="Heading 1"
+                    TextColor="DodgerBlue"
+                    FontSize="20"
+                    xct:SemanticEffect.HeadingLevel="Level1"/>
+            
+                <Label
+                    Text="not a heading"/>
+
+                <Label
+                    Text="Heading 2"
+                    TextColor="DodgerBlue"
+                    FontSize="16"
+                    xct:SemanticEffect.HeadingLevel="Level2"/>
+            
+                <Label
+                    Text="not a heading"/>
+            
+                <Label
+                    Text="not a heading"/>
+
+                <Label
+                    Text="Heading 3"
+                    TextColor="DodgerBlue"
+                    FontSize="14"
+                    xct:SemanticEffect.HeadingLevel="Level3"/>
+
+            </StackLayout>
         </ScrollView>
+
     </ContentPage.Content>
 </pages:BasePage>
