Implemented Platform Effect On iOS
I have done the first rough cut of the effect on iOS. I probably need to add some cleanup for the cancellation source which i will address next

--- a/samples/XCT.Sample/Pages/Effects/BackgroundAspectEffectPage.xaml
+++ b/samples/XCT.Sample/Pages/Effects/BackgroundAspectEffectPage.xaml
@@ -7,6 +7,9 @@
     xmlns:effects="clr-namespace:Xamarin.CommunityToolkit.Effects;assembly=Xamarin.CommunityToolkit"
     x:Class="Xamarin.CommunityToolkit.Sample.Pages.Effects.BackgroundAspectEffectPage"
     effects:BackgroundAspectEffect.Aspect="Fill">
+    <ContentPage.BackgroundImageSource>
+         <x:String>https://static.photocdn.pt/images/articles/2018/12/03/articles/2017_8/mountain-landscape-ponta-delgada-island-azores-picture-id944812540.jpg</x:String>
+    </ContentPage.BackgroundImageSource>
     <ContentPage.Content>
         <Label Text="This page has a cool background!" VerticalOptions="Center" HorizontalOptions="Center"/>
     </ContentPage.Content>
