--- a/samples/XCT.Sample/Pages/Effects/SemanticEffectPage.xaml
+++ b/samples/XCT.Sample/Pages/Effects/SemanticEffectPage.xaml
@@ -8,8 +8,8 @@
         <ScrollView Margin="15,20">
             <StackLayout>
                 <Label
-                    Text="Welcome to .NET MAUI Semantics!"
-                    xct:SemanticEffect.Description="Welcome to dotnet MAUI Semantics!"
+                    Text="Welcome to XCT Semantic Effects!"
+                    xct:SemanticEffect.Description="Welcome to Xamarin Community Toolkit Semantic Effects!"
                     TextColor="DodgerBlue"
                     FontSize="30"
                     HorizontalTextAlignment="Center"/>
@@ -41,7 +41,6 @@
                 <Button
                     Text="Button text TH"
                     FontSize="14"
-                    x:Name="pushButton"
                     HorizontalOptions="Center"
                     WidthRequest="200"
                     xct:SemanticEffect.Hint="Hint text"/>
@@ -51,12 +50,11 @@
                     FontSize="14"
                     HorizontalOptions="CenterAndExpand"
                     WidthRequest="200"
-                    x:Name="popButton"
                     xct:SemanticEffect.Description="Description text"
                     xct:SemanticEffect.Hint="Hint text"/>
 
                 <Entry
-                    Text="Entry text, iOS:DTH, Android:TH"
+                    Text="Entry text, DTH"
                     FontSize="14"
                     xct:SemanticEffect.Description="Description text"
                     xct:SemanticEffect.Hint="Hint text" />
@@ -67,7 +65,7 @@
                     xct:SemanticEffect.Hint="Hint text"/>
 
                 <Editor
-                    Text="Editor text, iOS:DTH, Android:TH"
+                    Text="Editor text, DTH"
                     FontSize="14"
                     xct:SemanticEffect.Description="Description text"
                     xct:SemanticEffect.Hint="Hint text"/>
@@ -78,7 +76,7 @@
                     xct:SemanticEffect.Hint="Hint text"/>
             
                 <SearchBar
-                    Text="Search bar text, iOS:T, Android:DH?"
+                    Text="Search bar text, DH"
                     Placeholder="Placeholder text"
                     PlaceholderColor="DodgerBlue"
                     xct:SemanticEffect.Description="Description text"
@@ -92,7 +90,7 @@
                     Margin="0,10"/>
 
                 <Picker
-                    Title="Select a monkey, iOS:DTH, Android:TH"
+                    Title="Select a monkey, DTH"
                     xct:SemanticEffect.Description="Description text"
                     xct:SemanticEffect.Hint="Hint text">
                     <Picker.ItemsSource>
@@ -139,7 +137,7 @@
                     xct:SemanticEffect.Description="Description text"
                     xct:SemanticEffect.Hint="Hint text"/>
 
-                <!-- iOS: currently not accessible as a whole; only focuses on increment/decrement buttons individually -->
+                <!-- [Both] Not accessible as a whole unit; only individual buttons are accessible. Whole unit is accessible in MAUI for Android. [Android] semantics read from "-" button only. [iOS] semantics are not read at all -->
                 <Stepper
                     xct:SemanticEffect.Description="Description text"
                     xct:SemanticEffect.Hint="Hint text"/>
@@ -194,6 +192,25 @@
                     TextColor="DodgerBlue"
                     FontSize="14"
                     xct:SemanticEffect.HeadingLevel="Level3"/>
+
+                <StackLayout xct:SemanticEffect.Description="Layout description text">
+                    <Label
+                        Text="Label in StackLayout with semantic description"
+                        FontSize="14"/>
+                    <Label
+                        Text="Label in StackLayout with semantic description"
+                        FontSize="14"/>
+                </StackLayout>
+
+                <!-- [iOS] Button is not individually accessible. -->
+                <StackLayout xct:SemanticEffect.Description="Layout description text">
+                    <Label
+                        Text="Label in StackLayout with semantic description"
+                        FontSize="14"/>
+                    <Button
+                        Text="Button in StackLayout with semantic description"
+                        FontSize="14"/>
+                </StackLayout>
 
             </StackLayout>
         </ScrollView>
