--- a/samples/XCT.Sample/Pages/Views/TextSwitcherPage.xaml
+++ b/samples/XCT.Sample/Pages/Views/TextSwitcherPage.xaml
@@ -9,7 +9,8 @@
     <StackLayout Padding="30, 20"
                  Spacing="20"
                  VerticalOptions="CenterAndExpand">
-        <Frame HasShadow="False"
+
+        <!--<Frame HasShadow="False"
                Padding="5"
                BorderColor="Black">
             <StackLayout HorizontalOptions="CenterAndExpand">
@@ -41,7 +42,23 @@
                         CommandParameter="{x:Reference secondSwitcher}"
                         Command="{Binding UpdateTextCommand, Source={x:Reference page}}" />
             </StackLayout>
+        </Frame>-->
+
+        <Frame HasShadow="False"
+               Padding="5"
+               BorderColor="Black">
+            <StackLayout HorizontalOptions="CenterAndExpand">
+                <Label Text="[Default] Image Switcher" />
+                <Image Source="xamarinstore.jpg"  />
+                <xct:ImageSwitcher
+                    x:Name="thirdSwitcher"
+                    Source="xamarinstore.jpg"/>
+                <Button Text="Update Image"
+                        CommandParameter="{x:Reference thirdSwitcher}"
+                        Command="{Binding UpdateImageCommand, Source={x:Reference page}}" />
+            </StackLayout>
         </Frame>
+
     </StackLayout>
 
 </pages:BasePage>
