--- a/samples/XCT.Sample/App.xaml
+++ b/samples/XCT.Sample/App.xaml
@@ -3,11 +3,12 @@
     x:Class="Xamarin.CommunityToolkit.Sample.App"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
     xmlns:custom="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
     xmlns:d="http://xamarin.com/schemas/2014/forms/design"
+    xmlns:droid="clr-namespace:Xamarin.CommunityToolkit.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.CommunityToolkit"
     xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
     mc:Ignorable="d">
     <Application.Resources>
         <!--  Values  -->
@@ -24,7 +25,7 @@
         <Color x:Key="DarkLabelTextColor">#000000</Color>
         <Color x:Key="DarkLabelPlaceholderColor">#333d47</Color>
         <Color x:Key="SoftFrameBackgroundColor">#ecf0f9</Color>
-
+        <Color x:Key="NavBarPurpleColor">#FF4D0089</Color>
         <!--  Fonts  -->
         <OnPlatform x:Key="font_bold" x:TypeArguments="x:String">
             <On Platform="iOS" Value=".SFUIText-Bold" />
@@ -59,8 +60,8 @@
             <Setter Property="NavigationPage.BackButtonTitle" Value="" />
             <Setter Property="xct:StatusBarEffect.Color" Value="{StaticResource PrimaryColor}" />
             <Setter Property="xct:StatusBarEffect.Style" Value="DarkContent" />
-            <Setter Property="xct:NavigationBarEffect.Color" Value="{StaticResource PrimaryColor}"/>
-            <Setter Property="xct:NavigationBarEffect.Style" Value="DarkContent" />
+            <Setter Property="droid:NavigationBarEffect.Color" Value="{StaticResource NavBarPurpleColor}" />
+            <Setter Property="droid:NavigationBarEffect.Style" Value="LightContent" />
         </Style>
 
         <Style TargetType="Button">
@@ -101,7 +102,11 @@
         <!--  Content templates  -->
         <ControlTemplate x:Key="GalleryPageTemplate">
             <StackLayout Spacing="0">
-                <ListView ItemsSource="{TemplateBinding BindingContext.FilteredItems}" SelectionMode="None" HasUnevenRows="True" SeparatorVisibility="None">
+                <ListView
+                    HasUnevenRows="True"
+                    ItemsSource="{TemplateBinding BindingContext.FilteredItems}"
+                    SelectionMode="None"
+                    SeparatorVisibility="None">
                     <ListView.Header>
                         <ContentView Padding="20,12">
                             <Entry
@@ -132,9 +137,9 @@
                                             </Grid.ColumnDefinitions>
                                             <BoxView BackgroundColor="{Binding DetailColor, Source={x:RelativeSource AncestorType={x:Type ContentPage}}}" />
                                             <StackLayout
-                                            Grid.Column="1"
-                                            Padding="0,24,24,24"
-                                            Spacing="8">
+                                                Grid.Column="1"
+                                                Padding="0,24,24,24"
+                                                Spacing="8">
                                                 <Label Style="{StaticResource label_section_header}" Text="{Binding Title}" />
                                                 <Label Text="{Binding Description}" />
                                             </StackLayout>
