--- a/samples/XCT.Sample/App.xaml
+++ b/samples/XCT.Sample/App.xaml
@@ -25,7 +25,8 @@
         <Color x:Key="DarkLabelTextColor">#000000</Color>
         <Color x:Key="DarkLabelPlaceholderColor">#333d47</Color>
         <Color x:Key="SoftFrameBackgroundColor">#ecf0f9</Color>
-        <Color x:Key="NavBarPurpleColor">#FF4D0089</Color>
+        <Color x:Key="StatusbarColor">#1976D2</Color>
+        <Color x:Key="NavBarColor">#1976D2</Color>
         <!--  Fonts  -->
         <OnPlatform x:Key="font_bold" x:TypeArguments="x:String">
             <On Platform="iOS" Value=".SFUIText-Bold" />
@@ -58,9 +59,9 @@
             <Setter Property="BackgroundColor" Value="{StaticResource AppBackgroundColor}" />
             <Setter Property="ios:Page.UseSafeArea" Value="False" />
             <Setter Property="NavigationPage.BackButtonTitle" Value="" />
-            <Setter Property="xct:StatusBarEffect.Color" Value="{StaticResource PrimaryColor}" />
+            <Setter Property="xct:StatusBarEffect.Color" Value="{StaticResource StatusbarColor}" />
             <Setter Property="xct:StatusBarEffect.Style" Value="DarkContent" />
-            <Setter Property="droid:NavigationBarEffect.Color" Value="{StaticResource NavBarPurpleColor}" />
+            <Setter Property="droid:NavigationBarEffect.Color" Value="{StaticResource NavBarColor}" />
             <Setter Property="droid:NavigationBarEffect.Style" Value="LightContent" />
         </Style>
 
